--- a/src/style.css
+++ b/src/style.css
@@ -19,39 +19,46 @@ h1 {
 #app {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
-    /* height: ; */
     width: 80vw;
     border: 1px solid black;
-    margin-top: 10;
 }
 
 #container1 {
     display: flex;
-    background-color: #d43e3e;
     border: 1px solid black;
     width: 100%;
 }
 
 #container-left {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     width: 50%;
-    height: 80vh;
-    background-color: #d43e3e;
+    height: 60vh;
     border: 1px solid black;
 }
 
 #container-right {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 50%;
-    height: 80vh;
-    background-color: aqua;
+    height: 60vh;
     border: 1px solid black;
+}
+
+.grid-cell {
+    border: 1px solid black;
+    width: 100%;
+    height: 100%;
+}
+
+.grid {
+    display: grid;
+    grid-template-rows: repeat(10, 1fr);
+    grid-template-columns: repeat(10, 1fr);
+    width: 80%;
+    height: 80%;
 }
