--- a/src/style.css
+++ b/src/style.css
@@ -7,13 +7,13 @@ body {
 }
 
 h1 {
-  background-color: #333;
-  color: rgb(205, 104, 104);
-  text-align: center;
-  border: 1px solid black;
-  width: 100%;
-  font-size: 4em;
-  margin: 0;
+    background-color: #333;
+    color: rgb(205, 104, 104);
+    text-align: center;
+    border: 1px solid black;
+    width: 100%;
+    font-size: 4em;
+    margin: 0;
 }
 
 #app {
@@ -68,4 +68,30 @@ h1 {
     width: 100%;
     height: 100%;
     background-color: #15ff00;
+}
+
+.ship-hit {
+    border: 1px solid black;
+    width: 100%;
+    height: 100%;
+    background-color: #ff0000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    font-weight: bold;
+    color: white;
+}
+
+.ship-miss {
+    border: 1px solid black;
+    width: 100%;
+    height: 100%;
+    background-color: #00d0ff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    font-weight: bold;
+    color: white;
 }
