--- a/src/style.css
+++ b/src/style.css
@@ -67,7 +67,7 @@ h1 {
     border: 1px solid black;
     width: 100%;
     height: 100%;
-    background-color: #15ff00;
+    background-color: #4c4d4c;
 }
 
 .ship-hit {
